[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/snowball_sprite_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/snowball.gd" type="Script" id=2]
[ext_resource path="res://Sounds/snowball_die.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="snowball" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprites" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "die"
playing = true

[node name="hit_area" type="Area2D" parent="."]

[node name="area_collision" type="CollisionShape2D" parent="hit_area"]
shape = SubResource( 2 )

[node name="die_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
area_mask = 2

[connection signal="animation_finished" from="sprites" to="." method="animation_finished"]
[connection signal="frame_changed" from="sprites" to="." method="snowball_frame_changed"]
[connection signal="body_exited" from="hit_area" to="." method="give_damage"]
